--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "connect": "^3.7.0",
     "connect-session-sequelize": "^7.1.2",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
